--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <header>
 		<ul>
 			<li>
-				<a href="https://rocknite-studio.serveo.net">Acceuil</a>
+				<a href="https://rocknite-studio.github.io/">Acceuil</a>
 			</li>
 			<li>
-				<a href="https://rocknite-studio.serveo.net/jeux">Jeux</a>
+				<a href="https://rocknite-studio.github.io//jeux">Jeux</a>
 			</li>
 			<li>
-				<a href="https://rocknite-studio.serveo.net/news">News</a>
+				<a href="https://rocknite-studio.github.io//news">News</a>
 			</li>
             <li>
-				<a href="https://rocknite-studio.serveo.net/SUPPORT">Assistance</a>
+				<a href="https://rocknite-studio.github.io//SUPPORT">Assistance</a>
 			</li>
 			<li>
-				<a href="https://rocknite-studio.serveo.net/login">Compte</a>
+				<a href="https://rocknite-studio.github.io//login">Compte</a>
 			</li>
 		</ul>
     </header>
