--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 				<a href="https://rocknite-studio.github.io/">Acceuil</a>
 			</li>
 			<li>
-				<a href="https://rocknite-studio.github.io//jeux">Jeux</a>
+				<a href="https://rocknite-studio.github.io/jeux">Jeux</a>
 			</li>
 			<li>
-				<a href="https://rocknite-studio.github.io//news">News</a>
+				<a href="https://rocknite-studio.github.io/news">News</a>
 			</li>
-            <li>
-				<a href="https://rocknite-studio.github.io//SUPPORT">Assistance</a>
+            		<li>
+				<a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
 			</li>
 			<li>
-				<a href="https://rocknite-studio.github.io//login">Compte</a>
+				<a href="hhttps://rocknite-studio.github.io/login">Compte</a>
 			</li>
 		</ul>
     </header>
