--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ROCKNITE-STUDIO Acceuil</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png" />
-    <meta name="description" content="ROCKNITE STUDIO officiel désolé mais on est en maintenance jusque au 01/01/2025 bientot il y aura le cloud anarchy (je veux pas voir ca)">
+    <meta name="description" content="ROCKNITE STUDIO | maintenance jusque au 01/01/2025">
 </head>
 <body>
     <header>
