--- a/preview/index.html
+++ b/preview/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slider Rockstar Style</title>
+    <title>ROCKNITE STUDIO preview</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,32 +12,32 @@
             <div class="slide">
                 <img src="images1.png" alt="Red Dead Redemption">
                 <div class="content">
-                    <small>Red Dead Redemption</small>
-                    <h1>Bande-annonce 1</h1>
+                    <small>Minecraft</small>
+                    <h1>A title picture</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="images2.png" alt="GTA V">
                 <div class="content">
-                    <small>GTA V</small>
-                    <h1>Bande-annonce 2</h1>
+                    <small></small>Minecraft</small>
+                    <h1>Cherry biome</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="images3.png" alt="Max Payne 3">
                 <div class="content">
-                    <small>Max Payne 3</small>
-                    <h1>Remastered</h1>
+                    <small>Minecraft</small>
+                    <h1>a verry good picture</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="images4.png" alt="Bully">
                 <div class="content">
-                    <small>Bully</small>
-                    <h1>Anniversary Edition</h1>
+                    <small>Minecraft</small>
+                    <h1>oh wow</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
