--- a/preview/index.html
+++ b/preview/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE STUDIO preview</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ROCKNITE-STUDIO Acceuil</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png" />
+    <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
+    <header>
+        <ul>
+            <li>
+                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/news">News</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/login">Compte</a>
+            </li>
+        </ul>
+    </header>
+
     <div class="slider-container">
         <div class="slider" id="slider">
             <div class="slide">
@@ -20,7 +42,7 @@
             <div class="slide">
                 <img src="images2.png" alt="GTA V">
                 <div class="content">
-                    <small></small>Minecraft</small>
+                    <small>Minecraft</small>
                     <h1>Cherry biome</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
@@ -29,7 +51,7 @@
                 <img src="images3.png" alt="Max Payne 3">
                 <div class="content">
                     <small>Minecraft</small>
-                    <h1>a verry good picture</h1>
+                    <h1>A very good picture</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
@@ -37,7 +59,7 @@
                 <img src="images4.png" alt="Bully">
                 <div class="content">
                     <small>Minecraft</small>
-                    <h1>oh wow</h1>
+                    <h1>Oh wow</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
@@ -45,6 +67,11 @@
 
         <!-- Boutons de navigation circulaires -->
         <div class="dots" id="dots"></div>
+    </div>
+
+    <div class="container">
+        <h1>Bienvenue sur ROCKNITE-STUDIO</h1>
+        <p>Explorez notre univers de jeux et découvrez toutes nos nouveautés.</p>
     </div>
 
     <script src="script.js"></script>
