--- a/preview/index.html
+++ b/preview/index.html
@@ -69,10 +69,9 @@
         <div class="dots" id="dots"></div>
     </div>
 
-    <div class="container">
-        <h1>Bienvenue sur ROCKNITE-STUDIO</h1>
-        <p>Explorez notre univers de jeux et découvrez toutes nos nouveautés.</p>
-    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
     <script src="script.js"></script>
 </body>
