--- a/index.html
+++ b/index.html
@@ -6,36 +6,73 @@
     <title>ROCKNITE-STUDIO Acceuil</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png" />
-    <meta name="description" content="ROCKNITE STUDIO | maintenance jusque au 01/01/2025">
+    <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
     <header>
-		<ul>
-			<li>
-				<a href="https://rocknite-studio.github.io/">Acceuil</a>
-			</li>
-			<li>
-				<a href="https://rocknite-studio.github.io/jeux">Jeux</a>
-			</li>
-			<li>
-				<a href="https://rocknite-studio.github.io/news">News</a>
-			</li>
-            		<li>
-				<a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
-			</li>
-			<li>
-				<a href="hhttps://rocknite-studio.github.io/login">Compte</a>
-			</li>
-		</ul>
+        <ul>
+            <li>
+                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/news">News</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/login">Compte</a>
+            </li>
+        </ul>
     </header>
-    
-    <body>
-    <div class="container">
-        <h1>Maintenance du site</h1>
-        <p>Notre site ne sera complètement disponible que le <strong>01/01/2025</strong> ou avant.</p>
-        <p>Le statut actuel du site peut être consulté à l'adresse suivante : <a href="http://rocknite-studio.serveo.net/statut" target="_blank">rocknite-studio.serveo.net/statut</a></p>
-        <p>Le site pourra être instable entre cette période et la fin de la maintenance. Nous nous excusons pour la gêne occasionnée.</p>
+
+    <div class="slider-container">
+        <div class="slider" id="slider">
+            <div class="slide">
+                <img src="images1.png" alt="Red Dead Redemption">
+                <div class="content">
+                    <small>Minecraft</small>
+                    <h1>A title picture</h1>
+                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="images2.png" alt="GTA V">
+                <div class="content">
+                    <small>Minecraft</small>
+                    <h1>Cherry biome</h1>
+                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="images3.png" alt="Max Payne 3">
+                <div class="content">
+                    <small>Minecraft</small>
+                    <h1>A very good picture</h1>
+                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="images4.png" alt="Bully">
+                <div class="content">
+                    <small>Minecraft</small>
+                    <h1>Oh wow</h1>
+                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Boutons de navigation circulaires -->
+        <div class="dots" id="dots"></div>
     </div>
+
+    <script src="script.js"></script>
 </body>
+</html>
+
+    <script src="script.js"></script>
 </body>
 </html>
