--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="slider-container">
         <div class="slider" id="slider">
             <div class="slide">
-                <img src="images1.png" alt="Red Dead Redemption">
+                <img src="images/image1.png" alt="MinosEscape">
                 <div class="content">
                     <small>Minecraft</small>
                     <h1>A title picture</h1>
