--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="slide">
                 <img src="images/image1.png" alt="MinosEscape">
                 <div class="content">
-                    <small>Minecraft</small>
-                    <h1>A title picture</h1>
-                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                    <small>Minos Escape</small>
+                    <h1>Minos Escape V1 est la !</h1>
+                    <a href="https://rocknite-studio.github.io/MinosEscape/" class="btn">JOUER</a>
                 </div>
             </div>
             <div class="slide">
