--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images2.png" alt="GTA V">
+                <img src="images/image2.png" alt="Nothing">
                 <div class="content">
-                    <small>Minecraft</small>
-                    <h1>Cherry biome</h1>
+                    <small>Nothing</small>
+                    <h1>Nothing</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
             <div class="slide">
-                <img src="images3.png" alt="Max Payne 3">
+                <img src="images/image3.png" alt="Nothing">
                 <div class="content">
-                    <small>Minecraft</small>
-                    <h1>A very good picture</h1>
+                    <small>Nothing</small>
+                    <h1>Nothing</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
             <div class="slide">
-                <img src="images4.png" alt="Bully">
+                <img src="images/image4.png" alt="Nothing">
                 <div class="content">
-                    <small>Minecraft</small>
-                    <h1>Oh wow</h1>
+                    <small>Nothing</small>
+                    <h1>Nothing</h1>
                     <a href="#" class="btn">VISIONNER MAINTENANT</a>
                 </div>
             </div>
