--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/image2.png" alt="Nothing">
+                <img src="images/image2.png" alt="SkyPlatform">
                 <div class="content">
-                    <small>Nothing</small>
-                    <h1>Nothing</h1>
-                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                    <small>SkyPlatform</small>
+                    <h1>SkyPlatform News</h1>
+                    <a href="#" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
