--- a/jeux/index.html
+++ b/jeux/index.html
@@ -24,7 +24,7 @@
 			<a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
 		</li>
 		<li>
-			<a href="hhttps://rocknite-studio.github.io/login">Compte</a>
+			<a href="https://rocknite-studio.github.io/login">Compte</a>
 		</li>
 	</ul>
     </header>
