--- a/jeux/index.html
+++ b/jeux/index.html
@@ -3,39 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE-STUDIO Support</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png" />
-    <meta name="description" content="ROCKNITE STUDIO | maintenance jusque au 01/01/2025">
+    <title>ROCKNITE STUDIO Jeux</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-	<ul>
-		<li>
-			<a href="https://rocknite-studio.github.io/">Acceuil</a>
-		</li>
-		<li>
-			<a href="https://rocknite-studio.github.io/jeux">Jeux</a>
-		</li>
-		<li>
-			<a href="https://rocknite-studio.github.io/news">News</a>
-		</li>
-            	<li>
-			<a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
-		</li>
-		<li>
-			<a href="https://rocknite-studio.github.io/login">Compte</a>
-		</li>
-	</ul>
+        <ul>
+            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
+            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
+            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
+            <li><a href="https://rocknite-studio.github.io/support">Assistance</a></li>
+            <li><a href="https://rocknite-studio.github.io/login">Compte</a></li>
+        </ul>
     </header>
     
-    <body>
     <div class="container">
-        <h1>Maintenance du site</h1>
-        <p>Notre site ne sera complètement disponible que le <strong>01/01/2025</strong> ou avant.</p>
-        <p>Le statut actuel du site peut être consulté à l'adresse suivante : <a href="http://rocknite-studio.github.io/statut" target="_blank">rocknite-studio.serveo.net/statut</a></p>
-        <p>Le site pourra être instable entre cette période et la fin de la maintenance. Nous nous excusons pour la gêne occasionnée.</p>
+        <h1>Nos Jeux</h1>
+        <div id="game-list"></div>
     </div>
-</body>
 </body>
 </html>
