--- a/jeux/index.html
+++ b/jeux/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE STUDIO Jeux</title>
+    <title>Jeux - ROCKNITE STUDIO</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png">
     <script defer src="script.js"></script>
@@ -18,10 +18,8 @@
             <li><a href="https://rocknite-studio.github.io/login">Compte</a></li>
         </ul>
     </header>
-    
-    <div class="container">
-        <h1>Nos Jeux</h1>
-        <div id="game-list"></div>
-    </div>
+
+    <div id="featured-game"></div>
+    <div id="game-list"></div>
 </body>
 </html>
