--- a/jeux/index.html
+++ b/jeux/index.html
@@ -19,7 +19,10 @@
         </ul>
     </header>
 
-    <div id="featured-game"></div>
-    <div id="game-list"></div>
+    <!-- Section du jeu en vedette -->
+    <div id="featured-game" class="featured-game"></div>
+
+    <!-- Section pour la liste des jeux -->
+    <div id="games-list" class="games-list"></div>
 </body>
 </html>
