--- a/jeux/index.html
+++ b/jeux/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeux - ROCKNITE STUDIO</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png">
+    <link rel="icon" href="https://rocknite-studio.github.io/logo.png">
     <script defer src="script.js"></script>
 </head>
 <body>
