--- a/preview/index.html
+++ b/preview/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE-STUDIO Acceuil</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="https://rocknite-studio.serveo.net/logo.png" />
+    <link rel="icon" href="https://rocknite-studio.github.io/logo.png" />
     <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
