--- a/preview/index.html
+++ b/preview/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE-STUDIO Acceuil</title>
+    <title>ROCKNITE-STUDIO | Preview</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="https://rocknite-studio.github.io/logo.png" />
     <meta name="description" content="ROCKNITE STUDIO">
