--- a/jeux/index.html
+++ b/jeux/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE-STUDIO | Jeux</title>
+    <title>ROCKNITE STUDIO | Jeux</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://rocknite-studio.github.io/logo.png">
     <script defer src="script.js"></script>
