--- a/SUPPORT/index.html
+++ b/SUPPORT/index.html
@@ -4,38 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Support</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="https://rocknite-studio.github.io/logo.png" />
-    <meta name="description" content="ROCKNITE STUDIO | maintenance jusque au 01/01/2025">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Barre de navigation -->
     <header>
-	<ul>
-		<li>
-			<a href="https://rocknite-studio.github.io/">Acceuil</a>
-		</li>
-		<li>
-			<a href="https://rocknite-studio.github.io/jeux">Jeux</a>
-		</li>
-		<li>
-			<a href="https://rocknite-studio.github.io/news">News</a>
-		</li>
-            	<li>
-			<a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
-		</li>
-		<li>
-			<a href="https://rocknite-studio.github.io/login">Compte</a>
-		</li>
-	</ul>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="games.html">Jeux</a></li>
+            <li><a href="support.html">Support</a></li>
+        </ul>
     </header>
-    
-    <body>
+
+    <!-- Conteneur principal -->
     <div class="container">
-        <h1>Maintenance du site</h1>
-        <p>Notre site ne sera complètement disponible que le <strong>01/01/2025</strong> ou avant.</p>
-        <p>Le statut actuel du site peut être consulté à l'adresse suivante : <a href="https://rocknite-studio.github.io/statut" target="_blank">rocknite-studio.serveo.net/statut</a></p>
-        <p>Le site pourra être instable entre cette période et la fin de la maintenance. Nous nous excusons pour la gêne occasionnée.</p>
+        <h1>Notre Équipe de Support</h1>
+        <div id="support-list"></div>
     </div>
-</body>
+
+    <script src="script.js"></script>
 </body>
 </html>
