--- a/SUPPORT/index.html
+++ b/SUPPORT/index.html
@@ -10,9 +10,21 @@
     <!-- Barre de navigation -->
     <header>
         <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="games.html">Jeux</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li>
+                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/news">News</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/login">Compte</a>
+            </li>
         </ul>
     </header>
 
