--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             <div class="slide">
                 <img src="images/image3.png" alt="Nothing">
                 <div class="content">
-                    <small>Nothing</small>
-                    <h1>Nothing</h1>
-                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                    <small>Resonance of Destruction</small>
+                    <h1>Le développement de Resonance of Destruction a commencé !</h1>
+                    <a href="#" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="images/image4.png" alt="Nothing">
                 <div class="content">
-                    <small>Nothing</small>
-                    <h1>Nothing</h1>
-                    <a href="#" class="btn">VISIONNER MAINTENANT</a>
+                    <small>ROCKNITE</small>
+                    <h1>Le projet ROCKNITE a été mis en pause.</h1>
+                    <a href="#" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
         </div>
