--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="content">
                     <small>Minos Escape</small>
                     <h1>Minos Escape V1 est la !</h1>
-                    <a href="https://rocknite-studio.github.io/MinosEscape/" class="btn">JOUER</a>
+                    <a href="https://rocknite-studio.github.io/game/MinosEscape/" class="btn">JOUER</a>
                 </div>
             </div>
             <div class="slide">
