--- a/login/index.html
+++ b/login/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+        <header>
+        <ul>
+            <li>
+                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/news">News</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/login">Compte</a>
+            </li>
+        </ul>
+    </header>
     <div class="container">
         <h1>Bienvenue</h1>
         <p><a href="login.html">Se connecter</a></p>
