--- a/login/index.html
+++ b/login/index.html
@@ -9,23 +9,27 @@
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/jeux">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/support">Assistance</a></li>
-            <li id="account-link">
-                <!-- Lien mis à jour dynamiquement selon le statut de connexion -->
+            <li>
+                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/news">News</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
+            </li>
+            <li>
+                <a href="https://rocknite-studio.github.io/login">Compte</a>
             </li>
         </ul>
     </header>
-
     <div class="container">
         <h1>Bienvenue</h1>
-        <p id="welcome-message"></p>
-        <div id="auth-links">
-            <p><a href="login.html">Se connecter</a></p>
-            <p><a href="register.html">S'inscrire</a></p>
-        </div>
+        <p><a href="login.html">Se connecter</a></p>
+        <p><a href="register.html">S'inscrire</a></p>
     </div>
 
     <script src="js/app.js"></script>
