--- a/login/index.html
+++ b/login/index.html
@@ -31,7 +31,7 @@
         <p><a href="login.html">Se connecter</a></p>
         <p><a href="register.html">S'inscrire</a></p>
     </div>
-
+    <script src="js/token.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
