--- a/login/login.html
+++ b/login/login.html
@@ -38,7 +38,7 @@
     </div>
     
     <p class="bottom-link">Pas encore inscrit ? <a href="register.html">Inscrivez-vous ici</a></p>
-    
+    <script src="js/token.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
