--- a/login/register.html
+++ b/login/register.html
@@ -40,7 +40,7 @@
     </div>
 
     <p class="bottom-link">Déjà inscrit ? <a href="login.html">Connectez-vous ici</a></p>
-
+    <script src="js/token.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
