--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="content">
                     <small>SkyPlatform</small>
                     <h1>SkyPlatform News</h1>
-                    <a href="#" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="https://rocknite-studio.github.io/news/SkyPlatform/" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
@@ -52,7 +52,7 @@
                 <div class="content">
                     <small>Resonance of Destruction</small>
                     <h1>Le développement de Resonance of Destruction a commencé !</h1>
-                    <a href="#" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="https://rocknite-studio.github.io/news/ResonanceOfDestruction/" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
@@ -60,7 +60,7 @@
                 <div class="content">
                     <small>ROCKNITE</small>
                     <h1>Le projet ROCKNITE a été mis en pause.</h1>
-                    <a href="#" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="https://rocknite-studio.github.io/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
         </div>
