--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <div class="slider-container">
         <div class="slider" id="slider">
             <div class="slide">
+                <img src="images/image3.png" alt="ROCKNITE">
+                <div class="content">
+                    <small>ROCKNITE</small>
+                    <h1>Reprise du développement de ROCKNITE !</h1>
+                    <a href="https://rocknite-studio.github.io/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
+                </div>
+            </div>
+            <div class="slide">
                 <img src="images/image1.png" alt="MinosEscape">
                 <div class="content">
                     <small>Minos Escape</small>
                     <h1>Minos Escape V1 est la !</h1>
                     <a href="https://rocknite-studio.github.io/game/MinosEscape/" class="btn">JOUER</a>
-                </div>
-            </div>
-            <div class="slide">
-                <img src="images/image2.png" alt="SkyPlatform">
-                <div class="content">
-                    <small>SkyPlatform</small>
-                    <h1>SkyPlatform News</h1>
-                    <a href="https://rocknite-studio.github.io/news/SkyPlatform/" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
