--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/image3.png" alt="Nothing">
+                <img src="images/np.png" alt="Nothing">
                 <div class="content">
                     <small>Resonance of Destruction</small>
                     <h1>Le développement de Resonance of Destruction a commencé !</h1>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/image4.png" alt="Nothing">
+                <img src="images/np.png" alt="Nothing">
                 <div class="content">
                     <small>ROCKNITE</small>
                     <h1>Le projet ROCKNITE a été mis en pause.</h1>
