--- a/game/ROCKNITE/index.html
+++ b/game/ROCKNITE/index.html
@@ -1,1 +1,37 @@
-...
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ROCKNITE ALPHA</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Jeux</a></li>
+            <li><a href="#">À propos</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </header>
+
+    <div class="game-container">
+        <div class="game-image">
+            <!-- Remplace par une vraie image de ton jeu -->
+            <img src="https://via.placeholder.com/800x450?text=ROCKNITE+ALPHA" alt="ROCKNITE ALPHA">
+        </div>
+        <div class="game-content">
+            <small>Version 1.2.1</small>
+            <h1>ROCKNITE ALPHA</h1>
+            <p>
+                Plonge dans l'univers explosif de ROCKNITE ALPHA, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. C'est la version alpha, totalement gratuite pour les premiers joueurs !
+            </p>
+            <p class="price">Prix : Gratuit (Alpha) - Version complète à venir (prix à confirmer)</p>
+            <a href="#" class="btn">Obtenir (Gratuit)</a>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
