--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -19,7 +19,7 @@
     <div class="game-container">
         <div class="game-image">
             <!-- Remplace par une vraie image de ton jeu -->
-            <img src="https://via.placeholder.com/800x450?text=ROCKNITE+ALPHA" alt="ROCKNITE ALPHA">
+            <img src="https://rocknite-studio.github.io/images/image3.png" alt="ROCKNITE ALPHA">
         </div>
         <div class="game-content">
             <small>Version 1.2.1</small>
