--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -17,18 +17,14 @@
     </header>
 
     <div class="game-container">
-        <div class="game-image">
-            <!-- Remplace par une vraie image de ton jeu -->
-            <img src="https://rocknite-studio.github.io/images/image3.png" alt="ROCKNITE ALPHA">
-        </div>
         <div class="game-content">
             <small>Version 1.2.1</small>
             <h1>ROCKNITE ALPHA</h1>
             <p>
                 Plonge dans l'univers explosif de ROCKNITE ALPHA, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. C'est la version alpha, totalement gratuite pour les premiers joueurs !
             </p>
-            <p class="price">Prix : Gratuit</p>
-            <a href="#" class="btn">Obtenir</a>
+            <p class="price">Prix : Gratuit (Alpha) - Version complète à venir (prix à confirmer)</p>
+            <a href="#" class="btn">Obtenir (Gratuit)</a>
         </div>
     </div>
 
