--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -24,6 +24,9 @@
                 Plonge dans l'univers explosif de ROCKNITE ALPHA, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. C'est la version alpha, totalement gratuite pour les premiers joueurs !
             </p>
             <p class="price">Prix : Gratuit (Alpha) - Version complète à venir (prix à confirmer)</p>
+        </div>
+        <div class="buttons">
+            <a href="#" class="btn">Regarder la bande-annonce</a>
             <a href="#" class="btn">Obtenir (Gratuit)</a>
         </div>
     </div>
