--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -21,7 +21,7 @@
             <small>Version 1.2.1</small>
             <h1>ROCKNITE ALPHA</h1>
             <p>
-                Plonge dans l'univers explosif de ROCKNITE ALPHA, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. C'est la version alpha, totalement gratuite pour les premiers joueurs !
+                Plonge dans l'univers explosif de ROCKNITE, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. Ceci est une version ALPHA qui n'est pas fini et qui peut contenir des bugs !
             </p>
             <p class="price">Prix : Gratuit</p>
         </div>
