--- a/game/ROCKNITE/index.html
+++ b/game/ROCKNITE/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE ALPHA</title>
+    <title>ROCKNITE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
             <p class="price">Prix : 10€</p>
         </div>
         <div class="buttons">
+            <a href="../ROCKNITE-ALPHA" class="btn">Testez la version ALPHA</a>
             <a href="https://rocknite-studio.netlify.app/buy?id=rocknite" class="btn">Précommander</a>
         </div>
     </div>
