--- a/game/ROCKNITE/index.html
+++ b/game/ROCKNITE/index.html
@@ -26,7 +26,7 @@
             <p class="price">Prix : 10€</p>
         </div>
         <div class="buttons">
-            <a href="../ROCKNITE-ALPHA" class="btn">Testez la version ALPHA</a>
+            <a href="../ROCKNITE-ALPHA" class="btnt">Testez la version ALPHA</a>
             <a href="https://rocknite-studio.netlify.app/buy?id=rocknite" class="btn">Précommander</a>
         </div>
     </div>
