--- a/game/ROCKNITE/index.html
+++ b/game/ROCKNITE/index.html
@@ -18,8 +18,8 @@
 
     <div class="game-container">
         <div class="game-content">
-            <small>Version 1.2.1</small>
-            <h1>ROCKNITE ALPHA</h1>
+            <small>Version 1.0.0</small>
+            <h1>ROCKNITE</h1>
             <p>
                 Plonge dans l'univers explosif de ROCKNITE, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique.
             </p>
