--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -26,7 +26,7 @@
             <p class="price">Prix : Gratuit</p>
         </div>
         <div class="buttons">
-            <a href="cdn-rocknite-studio.serveo.net/ROCKNITE-ALPHA-LATEST.zip" class="btn">Obtenir</a>
+            <a href="https://cdn-rocknite-studio.serveo.net/ROCKNITE-ALPHA-LATEST.zip" class="btn">Obtenir</a>
         </div>
     </div>
 
