--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -9,10 +9,11 @@
 <body>
     <header>
         <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Jeux</a></li>
-            <li><a href="#">À propos</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
+            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
+            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
+            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
+            <li><a href="https://rocknite-studio.github.io/login">Compte</a></li>
         </ul>
     </header>
 
