--- a/index.html
+++ b/index.html
@@ -11,21 +11,11 @@
 <body>
     <header>
         <ul>
-            <li>
-                <a href="https://rocknite-studio.github.io/">Acceuil</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/news">News</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/login">Compte</a>
-            </li>
+            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
+            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
+            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
+            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
+            <li><a href="https://rocknite-studio.github.io/login">Compte</a></li>
         </ul>
     </header>
 
