--- a/jeux/index.html
+++ b/jeux/index.html
@@ -14,7 +14,7 @@
             <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
             <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
             <li><a href="https://rocknite-studio.github.io/news">News</a></li>
-            <li><a href="https://rocknite-studio.github.io/support">Assistance</a></li>
+            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
             <li><a href="https://rocknite-studio.github.io/login">Compte</a></li>
         </ul>
     </header>
