--- a/SUPPORT/index.html
+++ b/SUPPORT/index.html
@@ -11,7 +11,7 @@
     <header>
         <ul>
             <li>
-                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+                <a href="https://rocknite-studio.github.io/">Accueil</a>
             </li>
             <li>
                 <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
