--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,7 @@
     <header>
         <ul>
             <li>
-                <a href="https://rocknite-studio.github.io/">Acceuil</a>
+                <a href="https://rocknite-studio.github.io/">Accueil</a>
             </li>
             <li>
                 <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
