--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="slider-container">
         <div class="slider" id="slider">
             <div class="slide">
-                <img src="images/image3.png" alt="ROCKNITE">
+                <img src="images/rocknite/image3.png" alt="ROCKNITE">
                 <div class="content">
                     <small>ROCKNITE</small>
                     <h1>Reprise du développement de ROCKNITE !</h1>
