--- a/login/protected.html
+++ b/login/protected.html
@@ -31,7 +31,7 @@
         <p id="message">Chargement...</p>
         <button id="logout-button">Se déconnecter</button>
     </div>
-    
     <script src="js/app.js"></script>
+    <script src="js/token.js"></script>
 </body>
 </html>
