--- a/login/protected.html
+++ b/login/protected.html
@@ -29,9 +29,11 @@
     <div class="container">
         <h1>Page Protégée</h1>
         <p id="message">Chargement...</p>
+        <p id="user-info">Utilisateur : <span id="username"></span> | Email : <span id="email"></span></p>
         <button id="logout-button">Se déconnecter</button>
     </div>
-    <script src="js/app.js"></script>
+    
     <script src="js/token.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
