--- a/SUPPORT/index.html
+++ b/SUPPORT/index.html
@@ -23,7 +23,7 @@
                 <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
             </li>
             <li>
-                <a href="https://rocknite-studio.github.io/login">Compte</a>
+                <a href="https://rocknite-studio.github.io/account">Compte</a>
             </li>
         </ul>
     </header>
