--- a/account/index.html
+++ b/account/index.html
@@ -84,7 +84,7 @@
   </div>
 
   <script>
-    const pb = new PocketBase("https://rocknite-login.serveo.net");
+    const pb = new PocketBase("https://rocknite-login.nglocalhost.com");
 
     function showSection(section) {
       document.getElementById("login-section").style.display = "none";
