--- a/TV/index.html
+++ b/TV/index.html
@@ -165,7 +165,7 @@
 
   async function checkAccess() {
     if (!pb.authStore.isValid) {
-      window.location.href = "/account/login";
+      window.location.href = "account/";
       return;
     }
 
