--- a/TV/index.html
+++ b/TV/index.html
@@ -161,7 +161,7 @@
 
 <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 <script>
-  const pb = new PocketBase('http://192.168.1.20:8083/');
+  const pb = new PocketBase('https://rocknite-login.nglocalhost.com');
 
   async function checkAccess() {
     if (!pb.authStore.isValid) {
@@ -213,7 +213,7 @@
       div.className = `item ${styleClass}`;
 
       const imageUrl = item.picture
-        ? `http://192.168.1.20:8083/api/files/TV_media/${item.id}/${item.picture}`
+        ? `https://rocknite-login.nglocalhost.com/api/files/TV_media/${item.id}/${item.picture}`
         : "https://via.placeholder.com/300x400?text=No+Image";
 
       const typeLabel = item.type === "movies" ? "Film" :
