--- a/TV/account/index.html
+++ b/TV/account/index.html
@@ -104,7 +104,7 @@
 
   <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
   <script>
-    const pb = new PocketBase("http://192.168.1.20:8083/");
+    const pb = new PocketBase("https://rocknite-login.nglocalhost.com/");
 
     // Redirection automatique si déjà connecté
     if (pb.authStore.isValid) {
