--- a/TV/index.html
+++ b/TV/index.html
@@ -161,7 +161,7 @@
 
 <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 <script>
-  const pb = new PocketBase('https://rocknite-login.nglocalhost.com');
+  const pb = new PocketBase('https://rocknite-studio.alwaysdata.net');
 
   async function checkAccess() {
     if (!pb.authStore.isValid) {
