--- a/TV/index.html
+++ b/TV/index.html
@@ -176,7 +176,7 @@
       });
 
       if (!subscription.expand?.plan || subscription.expand.plan.name !== "BASIC") {
-        window.location.href = "/subscribe";
+        window.location.href = "subscribe";
         return;
       }
 
@@ -185,13 +185,13 @@
       const diffDays = (now - createdAt) / (1000 * 60 * 60 * 24);
 
       if (diffDays > 30) {
-        window.location.href = "/subscribe";
+        window.location.href = "subscribe";
         return;
       }
 
       loadContent();
     } catch (err) {
-      window.location.href = "/subscribe";
+      window.location.href = "subscribe";
     }
   }
 
