--- a/TV/subscribe/index.html
+++ b/TV/subscribe/index.html
@@ -1,1 +1,60 @@
-This page is curently in developement !
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Abonnement - ROCKNITE-TV</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #1a0000;
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      background-color: #330000;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px #ff2200;
+      max-width: 500px;
+      width: 100%;
+    }
+
+    h1 {
+      color: #ff4500;
+      margin-bottom: 15px;
+    }
+
+    a {
+      color: #ffdd00;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    .email {
+      margin-top: 15px;
+      font-size: 14px;
+      opacity: 0.8;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Abonnement en développement</h1>
+    <p>La page d’abonnement est encore en cours de création.</p>
+    <p>En attendant, vous pouvez faire un don via PayPal :</p>
+    <p><a href="https://paypal.me/Satanas1275" target="_blank">paypal.me/Satanas1275</a></p>
+    <p>Si vous donnez <strong>5 € ou plus</strong>, vous recevrez un accès complet au site !</p>
+    <p class="email">Pensez juste à indiquer votre adresse email dans le message du don pour que je puisse vous activer manuellement.</p>
+    <p style="margin-top: 25px; font-size: 12px; opacity: 0.6;">Merci pour votre soutien 🧡</p>
+  </div>
+</body>
+</html>
