--- a/TV/subscribe/index.html
+++ b/TV/subscribe/index.html
@@ -39,7 +39,7 @@
       font-weight: bold;
     }
 
-    .email {
+    .email, .support {
       margin-top: 15px;
       font-size: 14px;
       opacity: 0.8;
@@ -49,11 +49,14 @@
 <body>
   <div class="container">
     <h1>Abonnement en développement</h1>
-    <p>La page d’abonnement est encore en cours de création.</p>
-    <p>En attendant, vous pouvez faire un don via PayPal :</p>
+    <p>La page d’abonnement est encore en construction.</p>
+    <p>En attendant, vous pouvez soutenir le projet via PayPal :</p>
     <p><a href="https://paypal.me/Satanas1275" target="_blank">paypal.me/Satanas1275</a></p>
-    <p>Si vous donnez <strong>5 € ou plus</strong>, vous recevrez un accès complet au site !</p>
-    <p class="email">Pensez juste à indiquer votre adresse email dans le message du don pour que je puisse vous activer manuellement.</p>
+    <p><strong>Un don de 5 € ou plus</strong> vous donne un <strong>accès complet pendant 2 ans</strong>.</p>
+    <p class="email">Merci d’indiquer votre <strong>adresse email</strong> dans le message du don pour que nous puissions activer votre compte.</p>
+    <p class="support">Si vous ne recevez pas votre accès dans les 24h, contactez le support à :<br>
+      <strong>rocknite-studio@alwaysdata.net</strong>
+    </p>
     <p style="margin-top: 25px; font-size: 12px; opacity: 0.6;">Merci pour votre soutien 🧡</p>
   </div>
 </body>
