--- a/account/index.html
+++ b/account/index.html
@@ -62,7 +62,7 @@
       id="account-avatar"
       src=""
       alt="Avatar"
-      style="width: 100px; border-radius: 50%; margin-bottom: 10px"
+      style="width: 100px; border-radius: 50%; margin-bottom: 10px; aspect-ratio: 1; object-fit: cover"
     />
     <p><strong>Email :</strong> <span id="account-email"></span></p>
     <p><strong>Nom :</strong> <span id="account-name"></span></p>
